force-app/main/default/objects/Opportunity_Service_Item__c/Opportunity_Service_Item__c.object-meta.xml
<CustomObject>
    <description>this holds the service that belongs to that specific opportunity that is based on the list service price</description>
    <label>Opportunity Service Item</label>
    <nameField>
        <label>Opportunity Service Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>