force-app/main/default/objects/Opportunity_Service_Item__c/fields/Id_List_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Service_Price__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>this is the relationship to the list service</description>
    <label>Id List Service Price</label>
    <referenceTo>List_Service_Price__c</referenceTo>
    <relationshipLabel>Opportunity Service Items</relationshipLabel>
    <relationshipName>Opportunity_Service_Items</relationshipName>
    <type>Lookup</type>
</CustomField>