force-app/main/default/objects/Opportunity_Service_Item__c/fields/Recurring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Fee__c</fullName>
    <description>This holds the recurring fee from the List Price Service object</description>
    <label>Recurring Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>