force-app/main/default/objects/Opportunity_Service_Item__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>holds the start date of the service</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>