force-app/main/default/objects/Opportunity_Service_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>this gives the type of service</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>