force-app/main/default/objects/Opportunity_Service_Item__c/recordTypes/CD_Opportunity_Servicde_Item.recordType-meta.xml
<RecordType>
    <fullName>CD_Opportunity_Servicde_Item</fullName>
    <active>true</active>
    <label>CD Opportunity Servicde Item</label>
</RecordType>