force-app/main/default/objects/Opportunity_Service_Item__c/recordTypes/SE_Opportunity_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>SE_Opportunity_Service_Item</fullName>
    <active>true</active>
    <label>SE Opportunity Service Item</label>
</RecordType>