force-app/main/default/objects/Opportunity_Service_Item__c/recordTypes/Talabat_Opportunity_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Opportunity_Service_Item</fullName>
    <active>true</active>
    <label>Talabat Opportunity Service Item</label>
</RecordType>