force-app/main/default/objects/Opportunity_Service_Item__c/recordTypes/Yogiyo_Opportunity_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Opportunity_Service_Item</fullName>
    <active>true</active>
    <label>Yogiyo Opportunity Service Item</label>
</RecordType>